Implement simple API for updating channel descriptions (not using the DB yet)
