# static/oas/v1/chat/channels.yml
@@ -71,6 +71,30 @@ paths:
                 $ref: "#/components/schemas/EmptySuccessResponse"
         400:
           $ref: "../common/errors.yml#/responses/BadRequest"
+  updateChannelDescription:
+    put:
+      tags:
+        - "Chat: Channels"
+      summary: Update the description for a chat channel
+      description: |
+        **REQUIRED PERMISSIONS:** TBD 
+        **RATE LIMIT:** TBD
+      requestBody:
+        description: The request body must contain a channel ID and an description string value.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateChannelDescriptionRequest"
+      responses:
+        200:
+          description: Updated description
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EmptySuccessResponse"
+        400:
+          $ref: "../common/errors.yml#/responses/BadRequest"
   addUser:
     put:
       tags:
@@ -176,6 +200,18 @@ components:
           type: string
           description: An image string to represent the channel
           example: <text x="10" y="10">Hello World!</text>
+
+    UpdateChannelDescriptionRequest:
+      type: object
+      properties:
+        channel_id:
+          type: string
+          description: The ID of the target channel
+          example: "0"
+        value:
+          type: string
+          description: A description of the channel
+          example: This is where I will explain the purpose of the channel.
 
     AddOrRemoveUserFromChannelRequest:
       type: object
